// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test the job endpoint Acquiring a job require a type 1`] = `"Variable \\"$typeList\\" of required type \\"[String!]!\\" was not provided."`;

exports[`Test the job endpoint List the jobs 1`] = `
Object {
  "data": Object {
    "job": Array [
      Object {
        "id": 1,
        "name": "Bla a",
      },
      Object {
        "id": 2,
        "name": "Bla b",
      },
    ],
  },
}
`;

exports[`Test the job endpoint One can acquire a job of a given type. 1`] = `
Object {
  "acquireJob": Object {
    "id": 1,
    "name": "Bla a",
    "output": Object {},
    "status": "processing",
  },
}
`;

exports[`Test the job endpoint One can add his own mutations to the schema 1`] = `
Object {
  "customAcquire": Object {
    "id": 1,
  },
}
`;

exports[`Test the job endpoint One can create a job of a given type. 1`] = `
Object {
  "jobCreate": Object {
    "id": 3,
    "name": "c",
    "output": null,
    "status": "queued",
  },
}
`;

exports[`Test the job endpoint One can request a job cancel 1`] = `
Object {
  "__typename": "job",
  "id": 3,
  "input": null,
  "name": null,
  "output": Object {
    "cancelMessage": "No cancel message provided",
  },
  "processingInfo": Object {
    "toto": false,
  },
  "status": "cancelled",
  "type": "d",
}
`;

exports[`Test the job endpoint The processingFunction expose . 1`] = `
Object {
  "__typename": "job",
  "id": 1,
  "input": Object {},
  "name": "Bla a",
  "output": Object {},
  "processingInfo": Object {
    "percent": 10,
  },
  "status": "successful",
  "type": "a",
}
`;

exports[`Test the job endpoint The processingFunction expose . 2`] = `Object {}`;

exports[`Test the job endpoint The processingFunction expose . 3`] = `
Object {
  "percent": 10,
}
`;

exports[`Test the job endpoint Workers can easily create jobs. 1`] = `
Object {
  "__typename": "job",
  "batchId": null,
  "id": 3,
  "input": null,
  "isUpdateAlreadyCalledWhileCancelRequested": false,
  "name": null,
  "output": null,
  "startAfter": null,
  "status": "queued",
  "type": "c",
}
`;

exports[`Test the job endpoint Workers can easily query jobs. 1`] = `
Array [
  Object {
    "__typename": "job",
    "id": 1,
    "input": Object {},
    "name": "Bla a",
    "output": Object {},
    "type": "a",
  },
  Object {
    "__typename": "job",
    "id": 2,
    "input": Object {},
    "name": "Bla b",
    "output": Object {},
    "type": "b",
  },
]
`;

exports[`Test the job endpoint Workers can easily query jobs. 2`] = `
Array [
  Object {
    "__typename": "job",
    "id": 1,
    "input": Object {},
    "name": "Bla a",
    "output": Object {},
    "type": "a",
  },
]
`;

exports[`Test the job endpoint checkForJobs allows to asynchronous processing functions. 1`] = `
Object {
  "__typename": "job",
  "id": 1,
  "input": Object {},
  "name": "Bla a",
  "output": Object {
    "total": "plop",
  },
  "processingInfo": null,
  "status": "successful",
  "type": "a",
}
`;

exports[`Test the job endpoint checkForJobs allows to simply acquire and update jobs. 1`] = `
Object {
  "__typename": "job",
  "id": 1,
  "input": Object {},
  "name": "Bla a",
  "output": Object {
    "total": 125,
  },
  "processingInfo": null,
  "status": "successful",
  "type": "a",
}
`;

exports[`Test the job endpoint checkForJobs allows to simply acquire multiple types of jobs at the same time. 1`] = `
Object {
  "__typename": "job",
  "id": 1,
  "input": Object {},
  "name": "Bla a",
  "output": Object {
    "total": 125,
  },
  "processingInfo": null,
  "status": "successful",
  "type": "a",
}
`;

exports[`Test the job endpoint checkForJobs allows to simply acquire multiple types of jobs at the same time. 2`] = `
Object {
  "__typename": "job",
  "id": 2,
  "input": Object {},
  "name": "Bla b",
  "output": Object {
    "total": 125,
  },
  "processingInfo": null,
  "status": "successful",
  "type": "b",
}
`;

exports[`Test the job endpoint checkForJobs declare jobs as failed when an error is raised. 1`] = `
Object {
  "__typename": "job",
  "id": 1,
  "input": Object {},
  "name": "Bla a",
  "output": Object {
    "error": "[TypeError: a.awd is not a function] Stack: TypeError: a.awd is not a function
    at processingFunction (/Users/friedrich/projects/graphql-node-jobs/tests/job.spec.js:223:11)
    at call (/Users/friedrich/projects/graphql-node-jobs/lib/worker/checkForJobs.js:97:42)
    at step (/Users/friedrich/projects/graphql-node-jobs/lib/worker/checkForJobs.js:37:23)
    at Object.next (/Users/friedrich/projects/graphql-node-jobs/lib/worker/checkForJobs.js:18:53)
    at fulfilled (/Users/friedrich/projects/graphql-node-jobs/lib/worker/checkForJobs.js:9:58)
    at processTicksAndRejections (internal/process/task_queues.js:97:5)",
  },
  "processingInfo": null,
  "status": "failed",
  "type": "a",
}
`;

exports[`Test the job endpoint checkForJobs processing function can return nothing if needed. 1`] = `
Object {
  "__typename": "job",
  "id": 1,
  "input": Object {},
  "name": "Bla a",
  "output": Object {},
  "processingInfo": null,
  "status": "successful",
  "type": "a",
}
`;

exports[`Test the job endpoint checkForJobs processing function can return nothing if needed. 2`] = `Object {}`;
